# recognize_polygon

./: .gitignore  CMakeLists.txt  README.en.md  README.md  main.cpp  main.out
include/: recognize_polygon.h
reco_poly/: main.cpp
reco_poly/include/: recognize_polygon.h
src/: recognize_polygon.cpp
